--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@testing-library/user-event": "^7.2.1",
         "axios": "^0.19.2",
         "date-fns": "^2.14.0",
+        "express": "^4.17.1",
         "joi-browser": "^13.4.0",
         "jwt-decode": "^2.2.0",
         "react": "^16.13.1",
@@ -42,6 +43,6 @@
         ]
     },
     "engines": {
-        "node": "12.18.1"
+        "node": "10.0"
     }
 }
